[fix] Necessary changed for the new typed GEF Classic interface
Change-Id: I28385f1554d49500aaf9311006f00b72868efc2b
Signed-off-by: Martin Melik Merkumians <melik-merkumians@acin.tuwien.ac.at>